# KNN-classifier

./: AUC.cpp  AUC.h  CAN.cpp  CAN.h  CHB.h  CLI.cpp  CLI.h  CMakeLists.txt  ClassifyCommand.cpp  ClassifyCommand.h  Client.h  ClientHandler.cpp  ClientHandler.h  Command.cpp  Command.h  Comparator.cpp  Comparator.h  ConnectionHandler.cpp  ConnectionHandler.h  Database.cpp  Database.h  DefaultIO.h  DisplayCommand.cpp  DisplayCommand.h  DownloadCommand.cpp  DownloadCommand.h  FileCSVIO.cpp  FileCSVIO.h  MAN.cpp  MAN.h  MIN.cpp  MIN.h  Makefile  Menu.cpp  Menu.h  README.md  Server.h  ServerCLI.cpp  ServerCLI.h  SettingsCommand.cpp  (+17 more)
ClientCLI/: AlgorithmSettings.cpp  AlgorithmSettings.h  ClassificationKnn.cpp  ClassificationKnn.h  ClientCLI.cpp  ClientCLI.h  DisplayClassiffications.cpp  DisplayClassiffications.h  DownloadFile.cpp  DownloadFile.h  Downloader.cpp  Downloader.h  UploadFile.cpp  UploadFile.h
Distances/: AUC.cpp  AUC.h  CAN.cpp  CAN.h  CHB.cpp  CHB.h  Distances.h  MAN.cpp  MAN.h  MIN.h
General/: Client.h  Database.cpp  Server.h  server.cpp
IO/: DefaultIO.h  FileCSVIO.cpp  FileCSVIO.h  FileIO.cpp  FileIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
ServerCLI/: ClassifyCommand.cpp  ClassifyCommand.h  ConnectionHandler.cpp  ConnectionHandler.h  DisplayCommand.cpp  DisplayCommand.h  DownloadCommand.cpp  DownloadCommand.h  ServerCLI.cpp  ServerCLI.h  SettingsCommand.cpp  SettingsCommand.h  UploadCommand.cpp  UploadCommand.h  Uploader.cpp  Uploader.h  util.cpp
src/: Makefile  clientMain.cpp  serverMain.cpp
src/ClientCLI/: AlgorithmSettings.cpp  AlgorithmSettings.h  ClassificationKnn.cpp  ClientCLI.cpp  DisplayClassiffications.cpp  DisplayClassiffications.h  DownloadFile.cpp  DownloadFile.h  Downloader.cpp  Makefile  UploadFile.cpp  UploadFile.h
src/Distances/: AUC.cpp  AUC.h  CAN.cpp  CAN.h  CHB.cpp  CHB.h  Distances.h  MAN.cpp  MIN.cpp  MIN.h  Makefile
src/General/: Client.h  Command.h  Database.cpp  Database.h  Makefile  Server.h  Vector.cpp  Vector.h  client.cpp  server.cpp
src/IO/: FileIO.cpp  Makefile  SocketIO.h
src/ServerCLI/: ClassifyCommand.cpp  ConnectionHandler.cpp  DisplayCommand.cpp  DisplayCommand.h  DownloadCommand.cpp  Makefile  ServerCLI.cpp  SettingsCommand.cpp  UploadCommand.cpp  UploadCommand.h  Uploader.cpp  util.cpp  util.h
